fix: Remove additional scrollbar

--- a/frappe/public/less/sidebar.less
+++ b/frappe/public/less/sidebar.less
@@ -6,6 +6,7 @@ html {
 }
 
 body {
+	overflow-y: hidden;
 	height: 100%;
 	 // The html and body elements cannot have any padding or margin.
 	margin: 0px;
